<resources>
    <string name="app_name">Biodata</string>
    <string name="bio_text">Biodata</string>
    <string name="nama_lengkap">Nama Lengkap:</string>
    <string name="nama_depan">Nama Depan</string>
    <string name="nama_belakang">Nama Belakang</string>
    <string name="tanggal_lahir">Tanggal Lahir:</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="alamat">Alamat:</string>
    <string name="contoh_jl_danau_segara_anak_rt99_rw78_kedungkandang_kota_malang_jawa_timur">Contoh: (Jl Danau Segara anak Rt99 Rw78 Kedungkandang Kota Malang Jawa Timur)</string>
    <string name="nomor_telepon">Nomor Telepon:</string>
    <string name="contoh_085155225890">Contoh: (085155225890)</string>
    <string name="output_biodata">Output Biodata</string>
    <string name="nama">Nama:</string>
    <string name="nomor_telp">Nomor Telp:</string>
    <string name="simpan">Simpan</string>
</resources>