<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bio_text"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama_depan"
                android:id="@+id/et_input_namaDepan"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/nama_belakang"
                android:id="@+id/et_input_namaBelakang"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/tanggal_lahir"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/et_input_tanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/dd_mm_yyyy" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/alamat"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contoh_jl_danau_segara_anak_rt99_rw78_kedungkandang_kota_malang_jawa_timur"
            android:id="@+id/et_input_alamat"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/nomor_telepon"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contoh_085155225890"
            android:id="@+id/et_input_nomor"
            android:layout_marginBottom="16dp"
            android:inputType="number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/output_biodata"
            android:textSize="24sp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_output_nama"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tanggal Lahir: "
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_output_tanggal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Alamat: "
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:id="@+id/tv_output_alamat"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomor_telp"
            android:textSize="16sp"
            android:layout_marginBottom="50dp"
            android:id="@+id/tv_output_nomor"/>
        <Button
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/simpan"
            android:textSize="24sp"
            android:id="@+id/btn_simpan"/>
    </LinearLayout>

</ScrollView>